--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         alt="">
                 </div>
                 <div class="blog-card-body">
-                    <h5 class="blog-card-title">Consectetur adipisicing elit</h6>
+                    <h5 class="blog-card-title">Glowing Star competition</h5>
 
                         <p class="blog-card-caption">
                             <a href="#">By: Admin</a>
